commit 6: Add functionality for parrallel web crawller fix other issues