@@ -15,6 +15,8 @@ import java.io.BufferedWriter;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
 import java.util.Objects;
 
 public final class WebCrawlerMain {
@@ -34,19 +36,38 @@ public final class WebCrawlerMain {
   private void run() throws Exception {
     Guice.createInjector(new WebCrawlerModule(config), new ProfilerModule()).injectMembers(this);
 
-    CrawlResult result = crawler.crawl(config.getStartPages());
+    List<String> startPages = config.getStartPages();
+    CrawlResult result = crawler.crawl(startPages);
     CrawlResultWriter resultWriter = new CrawlResultWriter(result);
-    // TODO: Write the crawl results to a JSON file (or System.out if the file name is empty)
-    // TODO: Write the profile data to a text file (or System.out if the file name is empty)
+    // 1 TODO: Write the crawl results to a JSON file (or System.out if the file name is empty)
+    // 2 TODO: Write the profile data to a text file (or System.out if the file name is empty)
+    //1
+    String resultPath = config.getResultPath();
+    if (!resultPath.isEmpty()) {
+      Path path = Paths.get(resultPath);
+      resultWriter.write(path);
+    } else {
+      resultWriter.write(new OutputStreamWriter(System.out));
+    }
+    //2
+    String profileOutputPath = config.getProfileOutputPath();
+    if (!profileOutputPath.isEmpty()) {
+      Path path = Paths.get(profileOutputPath);
+      profiler.writeData(path);
+    } else {
+      profiler.writeData(new OutputStreamWriter(System.out));
+    }
   }
 
   public static void main(String[] args) throws Exception {
-    if (args.length != 1) {
-      System.out.println("Usage: WebCrawlerMain [starting-url]");
-      return;
-    }
+//    if (args.length != 1) {
+//      System.out.println("Usage: WebCrawlerMain [starting-url]");
+//      return;
+//    }
 
-    CrawlerConfiguration config = new ConfigurationLoader(Path.of(args[0])).load();
+    Path path = Paths.get("C:\\Users\\dmalonas\\Downloads\\cd0381-advanced-java-programming-techniques-projectstarter\\starter\\webcrawler\\src\\main\\config\\written_question_1a.json");
+    ConfigurationLoader configurationLoader = new ConfigurationLoader(path);
+    CrawlerConfiguration config = configurationLoader.load();
     new WebCrawlerMain(config).run();
   }
 }
